force-app/main/default/objects/Dashboard_Filter__c/Dashboard_Filter__c.object-meta.xml
<CustomObject>
    <label>Dashboard Filter</label>
    <nameField>
        <displayFormat>DF-{0000}</displayFormat>
        <label>Dashboard Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dashboard Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>